Resolve text overflow bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,11 +192,6 @@ a {
         padding: 15px;
     }
 
-    .answer-button {
-        font-size: 1rem;
-        padding: 10px;
-    }
-
     .modal {
         width: 90%;
         max-width: 350px;
@@ -207,9 +202,11 @@ a {
     }
 
     .answer-button {
-        width: 100px;
-        font-size: 0.7rem;
-        padding: 8px;
+        width: 100%;
+        font-size: 0.8rem;
+        padding: 10px;
+        height: auto;
+        white-space: normal;
     }
 }
 
